style.css
body {
    height: 100vh;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
}

#container {
    height: 800px;
    width: 600px;
    border: 1px solid black;
    position: relative;
}

#taxi {
    width: 60px;
    height: 60px;
    background-color: #3d3dfd;
    position: absolute;
    bottom: 0;
}

.obstacles {
    width: 60px;
    height: 60px;
    background-color: #ffff6d;
    position: absolute;
}

#car1 {
    top: -50px;
}

#car2 {
    top:  -150px;
}

#car3 {
    top: -250px;
}

